# todo-app

./: .gitignore  LINTER.md  main.py  pyproject.toml  requirements.txt
src/: exceptions.py
src/api/: app.py  dependencies.py  routes.py
src/api/handlers/: exception_handlers.py
src/api/routers/: tasks.py
src/api/schemas/: task_schema.py
src/entities/: task.py  task_status.py
src/repositories/: base.py  memory.py
src/services/: task_service.py
tests/: conftest.py
tests/api/: conftest.py  expectations.py  steps.py  test_tasks_api.py
tests/entities/: test_task.py
tests/repositories/: test_memory_repository.py
tests/test_data/: task_data.py
