[project]
name = "todo-app"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
# Python 3.12+ support
target-version = "py312"
line-length = 100

# Exclude from checking
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (bug detection)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
]

# Ignore some rules
ignore = [
    "E501",   # line too long (controlled by line-length)
    "B008",   # don't complain about `Depends()` in FastAPI
]

[tool.ruff.lint.isort]
# Import sorting
known-first-party = ["src"]

[tool.ruff.format]
# Black-style formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
# Strict type checking
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

# Exclude from checking
exclude = [
    "venv",
    ".venv",
]

[[tool.mypy.overrides]]
# Relax checks for tests
module = "tests.*"
disallow_untyped_defs = false


